--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
