--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.0",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
