--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.17.0",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.5",
+    "react-loading-skeleton": "^3.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
